# advent-of-code-2021

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
.github/workflows/: pythonapp.yml
advent_of_code_2021/: day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
tests/: test_advent_of_code_2021.py  test_day1.py  test_day2.py  test_day_1.py  test_day_10.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_14.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_7.py  test_day_8.py  test_day_9.py
